IaC/argocd/argocd-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
    - name: tls-passthrough
      protocol: TLS
      port: 443
      hostname: argocd.max-kubes.com
      tls:
        mode: Passthrough
      allowedRoutes: 
      namespaces:
        from: Same
