IaC/argocd/argocd-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
    - name: tls-passthrough
      protocol: TLS
      port: 443
      hostname: argocd.max-kubes.com
      tls:
        mode: Passthrough
      allowedRoutes: 
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: argocd-gateway
      sectionName: tls-passthrough
  hostnames:
    - "argocd.max-kubes.com"
  rules:
    - backendRefs:
      - group: ''
        kind: Service
        name: argocd-server
        port: 443
        weight: 1
