IaC/argocd/argocd-tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: argocd-gateway
      sectionName: tls-passthrough
  hostnames:
    - "argocd.max-kubes.com"
  rules:
    - backendRefs:
      - group: ''
        kind: Service
        name: argocd-server
        port: 443
        weight: 1
